trying to fix input styles on safari again

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,10 @@ input {
   border: none;
   font-size: 1.2em;
   padding: 0.3em;
-  -webkit-apearance: none;
-  -webkit-border-radius: 3px;
+}
+input[type="text"],
+input[type="button"],
+input[type="submit"] {
+  -webkit-appearance: none;
+  border-radius: 3px;
 }
